--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-PIL==1.1.7
-PyYAML==3.11
-cycler==0.9.0
 dota2py==0.1.3
 future==0.15.2
-matplotlib==1.5.0
-meld3==1.0.2
-numpy==1.10.1
+matplotlib==1.1.1rc2
+numpy==1.6.2
 omdb==0.5.0
 pyowm==2.2.1
-pyparsing==2.0.6
-python-dateutil==2.4.2
+python-dateutil==1.5
 python-telegram-bot==2.9.2
-pytz==2015.7
+pytz==2012rc0
+PyYAML==3.11
 requests==2.8.1
-six==1.10.0
-supervisor==3.1.3
-wolframalpha==1.2
-wsgiref==0.1.2
+six==1.1.0
+virtualenv==13.1.2
+wheel==0.24.0
